﻿===== Hasor-Core v2.6.0 (2016-12-?)
* 新增:
    01.新增 ApiBinder 扩展机制。开发者可以通过 net.hasor.core.binder.ApiBinderCreater 接口可以自定义 ApiBinder。
    02.WebApiBinder 新增可以设置(请求/响应)编码方法。
* 改进:
    01.WebApiBinder 使用 ApiBinderCreater 机制提供。
    02.Web 特性通过 ApiBinder扩展机制融入 AppContext，不在需要继承 AppContext 定制化。
    03.受益于 ApiBinder 扩展机制，WebEnvironment、WebAppContext、WebHasor 都不在需要。
* 修复:
    01.Fix HasorUnitRunner 在 JUnit 4.12 版本上 computeTestMethods 方法出现异常的问题。

===== Hasor-Core v2.5.2 (2016-12-01)
* 新增:
    01.新增 MyBatis 插件，该插件会依赖 DBModule。
* 改进:
    01.整理出一个 Provider 实现工具类包。
    02.BindInfoBuilder 接口迁移位置。

===== Hasor-Core v2.5.1 (2016-11-08)
* 新增:
    01.新增 JFina 插件支持。HasorPlugin、HasorInterceptor、HasorHandler 三个插件。
    02.AppContext 新增两个 justInject 方法用于对某个标记了 Hasor 注解的对象执行依赖注入。
    03.SpringModule 插件类，增加 DefaultHasorBeanName 常量，表示当 Hasor 和 Spirng 集成时。如果 Spring 中的那么默认 Bean ID。
* 改进:
    01.Spring sechma 升级到 2.5.1。factoryID 不再是强制输入。如果没有配置 factoryID 会采用 "net.hasor.core.AppContext" 为默认名。
    02.简化 Spring 集成，取消与 Spring 的 Event 双向打通机制，如果开发者需要该功能可以自行基于 Spring 实现。
    03.Hasor 在启动的时候可以从外面传递 Map 来指定环境变量了。之前只能通过 env.config 来指定环境变量。
    04.增加 WebHasor 类，继承自 Hasor 类提供方便的 WebAppContext 初始化入口。
* 修复:
    01.Fix 因 ClassLoader 不同而导致的 shutdown 过程中可能的异常抛出。
    02.Fix Spring集成时，无法使用最简化 Hasor 配置的问题。

===== Hasor-Core v2.5.0 (2016-10-26)
* 新增:
    01.新增 ClassAwareProvider、InfoAwareProvider 两个工具类。
    02.Hasor 新增一个 autoAware 方法的重载。
    03.新增 Hasor 和 Junit 的整合，通过 Junit 做 Hasor 单元测试更加方便了。
    04.ApiBinder 接口新增 getBindInfo、findBindingRegister 两组共计4个方法，现在 init 期间也可以查询其他模块注册的 Bean 了。
    05.BeanBuilder 接口增加 getBindInfo、findBindingRegister 两组共计4个方法。其子类加以实现。
    06.AppContext 的 getBindInfo、findBindingRegister 方法实现沉降到 BeanBuilder 实现类中。
* 改进:
    01.升级依赖 slf4j-api 到 1.7.21 版本。
    02.删除 ContextEvent_Initialized 事件，该事件等同于 Module 的 loadModule。
    03.ContextShutdownListener、ContextStartListener两个内部接口提升为 Hasor Api接口。
    04.findModules 过程提升到 doInitialized 之前。